--- a/README.rdoc
+++ b/README.rdoc
@@ -1,2 +1,8 @@
-== RESTlogic
+### RESTlogic
 Generates all possible combinations of required and optional parameter values and their corresponding XML tests for the given REST endpoint
+
+##### Setup
++ clone the project
++ cd to project dir
++ run ```script/rails server```
++ Thats it!
